# rules_autoconf

./: BUILD.bazel  MODULE.bazel  README.md  config_test.c  defs.bzl  release.sh
.bcr/: metadata.template.json
.github/workflows/: publish.yaml  release.yaml  release_prep.sh
