load("@aspect_bazel_lib//lib:run_binary.bzl", "run_binary")
load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("//:defs.bzl", "define", "linux_only", "non_msvc", "non_osx", "non_windows", "osx_only", "windows_only")

HEADERS = {
    "HAVE_ARPA_INET_H": "arpa/inet.h",
    "HAVE_ASSERT_H": "assert.h",
    "HAVE_ATTR_XATTR_H": "attr/xattr.h",
    "HAVE_BYTESWAP_H": "byteswap.h",
    "HAVE_COMPLEX_H": "complex.h",
    "HAVE_CTYPE_H": "ctype.h",
    "HAVE_DIRENT_H": "dirent.h",
    "HAVE_DLFCN_H": "dlfcn.h",
    "HAVE_ENDIAN_H": "endian.h",
    "HAVE_ERRNO_H": "errno.h",
    "HAVE_EXECINFO_H": "execinfo.h",
    "HAVE_FCNTL_H": "fcntl.h",
    "HAVE_FENV_H": "fenv.h",
    "HAVE_FLOAT_H": "float.h",
    "HAVE_FNMATCH_H": "fnmatch.h",
    "HAVE_GLOB_H": "glob.h",
    "HAVE_GRP_H": "grp.h",
    "HAVE_ICONV_H": "iconv.h",
    "HAVE_IFADDRS_H": "ifaddrs.h",
    "HAVE_INTRIN_H": "intrin.h",
    "HAVE_INTTYPES_H": "inttypes.h",
    "HAVE_IO_H": "io.h",
    "HAVE_LANGINFO_H": "langinfo.h",
    "HAVE_LIMITS_H": "limits.h",
    "HAVE_LINUX_FS_H": "linux/fs.h",
    "HAVE_LOCALE_H": "locale.h",
    "HAVE_MATH_H": "math.h",
    "HAVE_MEMORY_H": "memory.h",
    "HAVE_NETDB_H": "netdb.h",
    "HAVE_NETINET_IN_H": "netinet/in.h",
    "HAVE_NETINET_TCP_H": "netinet/tcp.h",
    "HAVE_PATHS_H": "paths.h",
    "HAVE_POLL_H": "poll.h",
    "HAVE_PTHREAD_H": "pthread.h",
    "HAVE_PTY_H": "pty.h",
    "HAVE_PWD_H": "pwd.h",
    "HAVE_REGEX_H": "regex.h",
    "HAVE_RESOLV_H": "resolv.h",
    "HAVE_SEMAPHORE_H": "semaphore.h",
    "HAVE_SETJMP_H": "setjmp.h",
    "HAVE_SIGNAL_H": "signal.h",
    "HAVE_SPAWN_H": "spawn.h",
    "HAVE_STDALIGN_H": "stdalign.h",
    "HAVE_STDARG_H": "stdarg.h",
    "HAVE_STDATOMIC_H": "stdatomic.h",
    "HAVE_STDBOOL_H": "stdbool.h",
    "HAVE_STDDEF_H": "stddef.h",
    "HAVE_STDINT_H": "stdint.h",
    "HAVE_STDIO_H": "stdio.h",
    "HAVE_STDLIB_H": "stdlib.h",
    "HAVE_STDNORETURN_H": "stdnoreturn.h",
    "HAVE_STRINGS_H": "strings.h",
    "HAVE_STRING_H": "string.h",
    "HAVE_SYSLOG_H": "syslog.h",
    "HAVE_SYS_CDEFS_H": "sys/cdefs.h",
    "HAVE_SYS_ENDIAN_H": "sys/endian.h",
    "HAVE_SYS_EPOLL_H": "sys/epoll.h",
    "HAVE_SYS_EVENTFD_H": "sys/eventfd.h",
    "HAVE_SYS_FILE_H": "sys/file.h",
    "HAVE_SYS_INOTIFY_H": "sys/inotify.h",
    "HAVE_SYS_IOCTL_H": "sys/ioctl.h",
    "HAVE_SYS_MMAN_H": "sys/mman.h",
    "HAVE_SYS_MOUNT_H": "sys/mount.h",
    "HAVE_SYS_PARAM_H": "sys/param.h",
    "HAVE_SYS_PRCTL_H": "sys/prctl.h",
    "HAVE_SYS_RANDOM_H": "sys/random.h",
    "HAVE_SYS_RESOURCE_H": "sys/resource.h",
    "HAVE_SYS_SELECT_H": "sys/select.h",
    "HAVE_SYS_SENDFILE_H": "sys/sendfile.h",
    "HAVE_SYS_SOCKET_H": "sys/socket.h",
    "HAVE_SYS_STATVFS_H": "sys/statvfs.h",
    "HAVE_SYS_STAT_H": "sys/stat.h",
    "HAVE_SYS_SYSCALL_H": "sys/syscall.h",
    "HAVE_SYS_TIMEB_H": "sys/timeb.h",
    "HAVE_SYS_TIME_H": "sys/time.h",
    "HAVE_SYS_TYPES_H": "sys/types.h",
    "HAVE_SYS_UIO_H": "sys/uio.h",
    "HAVE_SYS_UN_H": "sys/un.h",
    "HAVE_SYS_UTSNAME_H": "sys/utsname.h",
    "HAVE_SYS_WAIT_H": "sys/wait.h",
    "HAVE_SYS_XATTR_H": "sys/xattr.h",
    "HAVE_TERMIOS_H": "termios.h",
    "HAVE_THREADS_H": "threads.h",
    "HAVE_TIME_H": "time.h",
    "HAVE_UCHAR_H": "uchar.h",
    "HAVE_UCONTEXT_H": "ucontext.h",
    "HAVE_UNISTD_H": "unistd.h",
    "HAVE_WCHAR_H": "wchar.h",
    "HAVE_XLOCALE_H": "xlocale.h",
}

write_file(
    name = "write_config_generator",
    out = "config_generator.c",
    content = ["""
#include <stdio.h>
#include <stdlib.h>

int main(int argc, char *argv[]) {
    FILE *f = fopen(argv[1], "w");
    if (!f) {
        perror("fopen");
        return 1;
    }

    fprintf(f, "#ifndef _RULES_AUTOCONF_CONFIG_H\\n");
    fprintf(f, "#define _RULES_AUTOCONF_CONFIG_H\\n\\n");
"""] + [
                  """#if __has_include(<{header}>)
    fprintf(f, "#define {define} 1\\n");
#endif""".format(
                      define = define,
                      header = header,
                  )
                  for define, header in HEADERS.items()
              ] + ['   fprintf(f, "\\n");'] +
              define("HAVE_ABORT") +
              define("HAVE_ABS") +
              define("HAVE_ATEXIT") +
              define("HAVE_ATOF") +
              define("HAVE_ATOI") +
              define("HAVE_ATOLL") +
              define("HAVE_BSEARCH") +
              define("HAVE_CALLOC") +
              define("HAVE_CLOCK") +
              define("HAVE_DECL_ABORT") +
              define("HAVE_DECL_ABS") +
              define("HAVE_DECL_ATOF") +
              define("HAVE_DECL_ATOI") +
              define("HAVE_DECL_ATOLL") +
              define("HAVE_DECL_BASENAME") +
              define("HAVE_DECL_BSEARCH") +
              define("HAVE_DECL_CALLOC") +
              define("HAVE_DECL_EXIT") +
              define("HAVE_DECL_FABS") +
              define("HAVE_DECL_FLOOR") +
              define("HAVE_DECL_FREE") +
              define("HAVE_DECL_GETENV") +
              define("HAVE_DECL_LABS") +
              define("HAVE_DECL_MALLOC") +
              define("HAVE_DECL_MEMCMP") +
              define("HAVE_DECL_MEMCPY") +
              define("HAVE_DECL_MEMMOVE") +
              define("HAVE_DECL_MEMSET") +
              define("HAVE_DECL_PUTENV") +
              define("HAVE_DECL_QSORT") +
              define("HAVE_DECL_RAND") +
              define("HAVE_DECL_REALLOC") +
              define("HAVE_DECL_SIGNAL") +
              define("HAVE_DECL_SIN") +
              define("HAVE_DECL_SNPRINTF") +
              define("HAVE_DECL_SQRT") +
              define("HAVE_DECL_SRAND") +
              define("HAVE_DECL_STRCHR") +
              define("HAVE_DECL_STRCMP") +
              define("HAVE_DECL_STRERROR") +
              define("HAVE_DECL_STRLEN") +
              define("HAVE_DECL_STRNCMP") +
              define("HAVE_DECL_STRSTR") +
              define("HAVE_DECL_STRTOD") +
              define("HAVE_DECL_STRTOF") +
              define("HAVE_DECL_STRTOL") +
              define("HAVE_DECL_STRTOUL") +
              define("HAVE_DECL_TIME") +
              define("HAVE_DECL_VSNPRINTF") +
              define("HAVE_EXIT") +
              define("HAVE_FABS") +
              define("HAVE_FILENO") +
              define("HAVE_FLOOR") +
              define("HAVE_FPRINTF") +
              define("HAVE_FREE") +
              define("HAVE_FSTAT") +
              define("HAVE_GETADDRINFO") +
              define("HAVE_GETENV") +
              define("HAVE_ISCNTRL") +
              define("HAVE_LABS") +
              define("HAVE_LLABS") +
              define("HAVE_LOCALTIME") +
              define("HAVE_MALLOC") +
              define("HAVE_MEMCMP") +
              define("HAVE_MEMCPY") +
              define("HAVE_MEMMOVE") +
              define("HAVE_MEMSET") +
              define("HAVE_PRINTF") +
              define("HAVE_QSORT") +
              define("HAVE_RAND") +
              define("HAVE_REALLOC") +
              define("HAVE_SIN") +
              define("HAVE_SNPRINTF") +
              define("HAVE_SPRINTF") +
              define("HAVE_SQRT") +
              define("HAVE_SRAND") +
              define("HAVE_STRTOD") +
              define("HAVE_STRTOF") +
              define("HAVE_STRTOL") +
              define("HAVE_STRTOOLD") +
              define("HAVE_STRTOUL") +
              define("HAVE_TIME") +
              define("HAVE_TMPFILE") +
              define("HAVE_TMPNAM") +
              define("HAVE_TYPE_INT16_T") +
              define("HAVE_TYPE_INT32_T") +
              define("HAVE_TYPE_INT64_T") +
              define("HAVE_TYPE_INT8_T") +
              define("HAVE_TYPE_INTPTR_T") +
              define("HAVE_TYPE_MODE_T") +
              define("HAVE_TYPE_OFF_T") +
              define("HAVE_TYPE_SIZE_T") +
              define("HAVE_TYPE_TIME_T") +
              define("HAVE_TYPE_UINT16_T") +
              define("HAVE_TYPE_UINT32_T") +
              define("HAVE_TYPE_UINT64_T") +
              define("HAVE_TYPE_UINT8_T") +
              define("HAVE_TYPE_UINTPTR_T") +
              define("HAVE_UINTPTR_T") +
              define("HAVE_VFPRINTF") +
              define("HAVE_VPRINTF") +
              define("HAVE_VSNPRINTF") +
              define("HAVE_VSPRINTF") +
              define("HAVE___INLINE") +
              define("HAVE___RESTRICT") +
              define("STDC_HEADERS") +
              linux_only("HAVE_DECL_EPOLL_CREATE") +
              linux_only("HAVE_DECL_EPOLL_CTL") +
              linux_only("HAVE_DECL_EPOLL_WAIT") +
              linux_only("HAVE_DECL_EVENTFD") +
              linux_only("HAVE_DECL_EVENTFD2") +
              linux_only("HAVE_DECL_GETRANDOM") +
              linux_only("HAVE_DECL_INOTIFY_INIT") +
              linux_only("HAVE_DECL_INOTIFY_INIT1") +
              linux_only("HAVE_DECL_MEMMEM") +
              linux_only("HAVE_DECL_PIPE2") +
              linux_only("HAVE_DECL_PREAD") +
              linux_only("HAVE_DECL_PREADV") +
              linux_only("HAVE_DECL_PWRITE") +
              linux_only("HAVE_DECL_PWRITEV") +
              linux_only("HAVE_DECL_SENDFILE") +
              linux_only("HAVE_DECL_SENDFILE64") +
              linux_only("HAVE_DECL_SIGNALFD") +
              linux_only("HAVE_DECL_SIGNALFD4") +
              linux_only("HAVE_DECL_SPLICE") +
              linux_only("HAVE_DECL_STRRCHRNUL") +
              linux_only("HAVE_DECL_TEE") +
              linux_only("HAVE_DECL_TIMERFD_CREATE") +
              linux_only("HAVE_DECL_TIMERFD_SETTIME") +
              linux_only("HAVE_EPOLL_CREATE") +
              linux_only("HAVE_EPOLL_CTL") +
              linux_only("HAVE_EPOLL_WAIT") +
              linux_only("HAVE_EVENTFD") +
              linux_only("HAVE_EVENTFD2") +
              linux_only("HAVE_EXPLICIT_BZERO") +
              linux_only("HAVE_FACCESSAT") +
              linux_only("HAVE_FANOTIFY_INIT") +
              linux_only("HAVE_GETRANDOM") +
              linux_only("HAVE_INOTIFY_INIT") +
              linux_only("HAVE_INOTIFY_INIT1") +
              linux_only("HAVE_MEMMEM") +
              linux_only("HAVE_MEMPCPY") +
              linux_only("HAVE_OPEN64") +
              linux_only("HAVE_PIPE2") +
              linux_only("HAVE_PREAD") +
              linux_only("HAVE_PREADV") +
              linux_only("HAVE_PWRITE") +
              linux_only("HAVE_PWRITEV") +
              linux_only("HAVE_SENDFILE") +
              linux_only("HAVE_SENDFILE64") +
              linux_only("HAVE_SIGNALFD") +
              linux_only("HAVE_SIGNALFD4") +
              linux_only("HAVE_SPLICE") +
              linux_only("HAVE_STATIC_ASSERT_IN_ASSERT_H") +
              linux_only("HAVE_STRRCHRNUL") +
              linux_only("HAVE_TEE") +
              linux_only("HAVE_TIMERFD_CREATE") +
              linux_only("HAVE_TIMERFD_SETTIME") +
              linux_only("HAVE_VMSPLICE") +
              non_msvc("HAVE_FUNC_ATTRIBUTE_CONST") +
              non_msvc("HAVE_FUNC_ATTRIBUTE_DEPRECATED") +
              non_msvc("HAVE_FUNC_ATTRIBUTE_DESTRUCTOR") +
              non_msvc("HAVE_FUNC_ATTRIBUTE_FORMAT") +
              non_msvc("HAVE_FUNC_ATTRIBUTE_MALLOC") +
              non_msvc("HAVE_FUNC_ATTRIBUTE_NONNULL") +
              non_msvc("HAVE_FUNC_ATTRIBUTE_NORETURN") +
              non_msvc("HAVE_FUNC_ATTRIBUTE_PACKED") +
              non_msvc("HAVE_FUNC_ATTRIBUTE_PURE") +
              non_msvc("HAVE_FUNC_ATTRIBUTE_SENTINEL") +
              non_msvc("HAVE_FUNC_ATTRIBUTE_SYMVER") +
              non_msvc("HAVE_FUNC_ATTRIBUTE_UNUSED") +
              non_msvc("HAVE_FUNC_ATTRIBUTE_VISIBILITY") +
              non_msvc("HAVE_FUNC_ATTRIBUTE_WARN_UNUSED_RESULT") +
              non_msvc("HAVE_GNU_INLINE") +
              non_msvc("HAVE_INLINE") +
              non_msvc("HAVE_RESTRICT") +
              non_msvc("HAVE_TYPEOF") +
              non_msvc("HAVE_VARIADIC_MACROS") +
              non_msvc("HAVE__BOOL") +
              non_msvc("HAVE___INLINE__") +
              non_msvc("HAVE___RESTRICT__") +
              non_osx("HAVE_FTIME") +
              non_windows("HAVE_ALARM") +
              non_windows("HAVE_ALIGNED_ALLOC") +
              non_windows("HAVE_CANONICALIZE_FILE_NAME") +
              non_windows("HAVE_CHDIR") +
              non_windows("HAVE_CHMOD") +
              non_windows("HAVE_CHOWN") +
              non_windows("HAVE_CLOCK_GETTIME") +
              non_windows("HAVE_CLOSE") +
              non_windows("HAVE_CLOSEDIR") +
              non_windows("HAVE_CONFSTR") +
              non_windows("HAVE_CTIME_R") +
              non_windows("HAVE_DECL_ALARM") +
              non_windows("HAVE_DECL_ALIGNED_ALLOC") +
              non_windows("HAVE_DECL_ASCTIME_R") +
              non_windows("HAVE_DECL_BCOPY") +
              non_windows("HAVE_DECL_BZERO") +
              non_windows("HAVE_DECL_CANONICALIZE_FILE_NAME") +
              non_windows("HAVE_DECL_CHDIR") +
              non_windows("HAVE_DECL_CHMOD") +
              non_windows("HAVE_DECL_CHOWN") +
              non_windows("HAVE_DECL_CLOCK_GETTIME") +
              non_windows("HAVE_DECL_CLONEFILE") +
              non_windows("HAVE_DECL_CLOSE") +
              non_windows("HAVE_DECL_CLOSEDIR") +
              non_windows("HAVE_DECL_CONFSTR") +
              non_windows("HAVE_DECL_CRYPT") +
              non_windows("HAVE_DECL_CTIME_R") +
              non_windows("HAVE_DECL_DIRNAME") +
              non_windows("HAVE_DECL_DLERROR") +
              non_windows("HAVE_DECL_DLOPEN") +
              non_windows("HAVE_DECL_DLSYM") +
              non_windows("HAVE_DECL_DUP") +
              non_windows("HAVE_DECL_DUP2") +
              non_windows("HAVE_DECL_FCNTL") +
              non_windows("HAVE_DECL_FFS") +
              non_windows("HAVE_DECL_FILENO") +
              non_windows("HAVE_DECL_FORK") +
              non_windows("HAVE_DECL_FSYNC") +
              non_windows("HAVE_DECL_FTIME") +
              non_windows("HAVE_DECL_FTRUNCATE") +
              non_windows("HAVE_DECL_FUTIMENS") +
              non_windows("HAVE_DECL_GETADDRINFO") +
              non_windows("HAVE_DECL_GETCWD") +
              non_windows("HAVE_DECL_GETDELIM") +
              non_windows("HAVE_DECL_GETEGID") +
              non_windows("HAVE_DECL_GETENTROPY") +
              non_windows("HAVE_DECL_GETEUID") +
              non_windows("HAVE_DECL_GETGID") +
              non_windows("HAVE_DECL_GETGRGID") +
              non_windows("HAVE_DECL_GETHOSTNAME") +
              non_windows("HAVE_DECL_GETLINE") +
              non_windows("HAVE_DECL_GETLOGIN") +
              non_windows("HAVE_DECL_GETLOGIN_R") +
              non_windows("HAVE_DECL_GETNAMEINFO") +
              non_windows("HAVE_DECL_GETPAGESIZE") +
              non_windows("HAVE_DECL_GETPASS") +
              non_windows("HAVE_DECL_GETPID") +
              non_windows("HAVE_DECL_GETPPID") +
              non_windows("HAVE_DECL_GETRLIMIT") +
              non_windows("HAVE_DECL_GETTIMEOFDAY") +
              non_windows("HAVE_DECL_GLOB") +
              non_windows("HAVE_DECL_GMTIME_R") +
              non_windows("HAVE_DECL_IF_INDEXTONAME") +
              non_windows("HAVE_DECL_IF_NAMETOINDEX") +
              non_windows("HAVE_DECL_INET_NTOA") +
              non_windows("HAVE_DECL_INET_NTOP") +
              non_windows("HAVE_DECL_INET_PTON") +
              non_windows("HAVE_DECL_ISATTY") +
              non_windows("HAVE_DECL_ISSETUGID") +
              non_windows("HAVE_DECL_KILL") +
              non_windows("HAVE_DECL_LINK") +
              non_windows("HAVE_DECL_LSEEK") +
              non_windows("HAVE_DECL_LUTIMENS") +
              non_windows("HAVE_DECL_MKDIR") +
              non_windows("HAVE_DECL_MKFIFO") +
              non_windows("HAVE_DECL_MKNOD") +
              non_windows("HAVE_DECL_MKSTEMP") +
              non_windows("HAVE_DECL_MMAP") +
              non_windows("HAVE_DECL_NANOSLEEP") +
              non_windows("HAVE_DECL_OPEN") +
              non_windows("HAVE_DECL_OPENDIR") +
              non_windows("HAVE_DECL_PATHCONF") +
              non_windows("HAVE_DECL_PIPE") +
              non_windows("HAVE_DECL_PIPE2") +
              non_windows("HAVE_DECL_POLL") +
              non_windows("HAVE_DECL_POPEN") +
              non_windows("HAVE_DECL_POSIX_MEMALIGN") +
              non_windows("HAVE_DECL_PREAD") +
              non_windows("HAVE_DECL_PSELECT") +
              non_windows("HAVE_DECL_PTRACE") +
              non_windows("HAVE_DECL_PWRITE") +
              non_windows("HAVE_DECL_READ") +
              non_windows("HAVE_DECL_READDIR") +
              non_windows("HAVE_DECL_READLINK") +
              non_windows("HAVE_DECL_REALLOCARRAY") +
              non_windows("HAVE_DECL_REALPATH") +
              non_windows("HAVE_DECL_RENAME") +
              non_windows("HAVE_DECL_RMDIR") +
              non_windows("HAVE_DECL_SELECT") +
              non_windows("HAVE_DECL_SEM_INIT") +
              non_windows("HAVE_DECL_SEM_POST") +
              non_windows("HAVE_DECL_SEM_WAIT") +
              non_windows("HAVE_DECL_SENDFILE") +
              non_windows("HAVE_DECL_SETENV") +
              non_windows("HAVE_DECL_SETGID") +
              non_windows("HAVE_DECL_SETUID") +
              non_windows("HAVE_DECL_SHM_OPEN") +
              non_windows("HAVE_DECL_SLEEP") +
              non_windows("HAVE_DECL_SNPRINTF") +
              non_windows("HAVE_DECL_SOCKADDR_LEN") +
              non_windows("HAVE_DECL_SOCKET") +
              non_windows("HAVE_DECL_STAT") +
              non_windows("HAVE_DECL_STRCASECMP") +
              non_windows("HAVE_DECL_STRCSPN") +
              non_windows("HAVE_DECL_STRFTIME") +
              non_windows("HAVE_DECL_STRICMP") +
              non_windows("HAVE_DECL_STRMODE") +
              non_windows("HAVE_DECL_STRNCASECMP") +
              non_windows("HAVE_DECL_STRNDUP") +
              non_windows("HAVE_DECL_STRNLEN") +
              non_windows("HAVE_DECL_STRSEP") +
              non_windows("HAVE_DECL_SYMLINK") +
              non_windows("HAVE_DECL_SYNC") +
              non_windows("HAVE_DECL_SYSCONF") +
              non_windows("HAVE_DECL_UNLINK") +
              non_windows("HAVE_DECL_WRITE") +
              non_windows("HAVE_DIRNAME") +
              non_windows("HAVE_DLOPEN") +
              non_windows("HAVE_DUP") +
              non_windows("HAVE_DUP2") +
              non_windows("HAVE_EXECVE") +
              non_windows("HAVE_EXECVP") +
              non_windows("HAVE_FCNTL") +
              non_windows("HAVE_FFS") +
              non_windows("HAVE_FORK") +
              non_windows("HAVE_FSEEKO") +
              non_windows("HAVE_FSYNC") +
              non_windows("HAVE_FTRUNCATE") +
              non_windows("HAVE_FUTIMENS") +
              non_windows("HAVE_GETADDRINFO") +
              non_windows("HAVE_GETCWD") +
              non_windows("HAVE_GETDELIM") +
              non_windows("HAVE_GETEGID") +
              non_windows("HAVE_GETENTROPY") +
              non_windows("HAVE_GETEUID") +
              non_windows("HAVE_GETGID") +
              non_windows("HAVE_GETGRGID") +
              non_windows("HAVE_GETHOSTNAME") +
              non_windows("HAVE_GETLINE") +
              non_windows("HAVE_GETLOGIN") +
              non_windows("HAVE_GETLOGIN_R") +
              non_windows("HAVE_GETNAMEINFO") +
              non_windows("HAVE_GETPAGESIZE") +
              non_windows("HAVE_GETPID") +
              non_windows("HAVE_GETPPID") +
              non_windows("HAVE_GETRLIMIT") +
              non_windows("HAVE_GETTIMEOFDAY") +
              non_windows("HAVE_GETUID") +
              non_windows("HAVE_GMTIME_R") +
              non_windows("HAVE_HTOLE16") +
              non_windows("HAVE_HTOLE32") +
              non_windows("HAVE_HTOLE64") +
              non_windows("HAVE_IF_INDEXTONAME") +
              non_windows("HAVE_IF_NAMETOINDEX") +
              non_windows("HAVE_INET_NTOP") +
              non_windows("HAVE_INET_PTON") +
              non_windows("HAVE_ISASCII") +
              non_windows("HAVE_KILL") +
              non_windows("HAVE_LIBPTHREAD") +
              non_windows("HAVE_LINK") +
              non_windows("HAVE_LOCALTIME_R") +
              non_windows("HAVE_LSEEK") +
              non_windows("HAVE_LUTIMENS") +
              non_windows("HAVE_MAX_ALIGN_T") +
              non_windows("HAVE_MKDIR") +
              non_windows("HAVE_MKFIFO") +
              non_windows("HAVE_MKNOD") +
              non_windows("HAVE_MKSTEMP") +
              non_windows("HAVE_MMAP") +
              non_windows("HAVE_OPEN") +
              non_windows("HAVE_OPENDIR") +
              non_windows("HAVE_PATHCONF") +
              non_windows("HAVE_PIPE") +
              non_windows("HAVE_POLL") +
              non_windows("HAVE_POSIX_MEMALIGN") +
              non_windows("HAVE_PSELECT") +
              non_windows("HAVE_READ") +
              non_windows("HAVE_READDIR") +
              non_windows("HAVE_READLINK") +
              non_windows("HAVE_REALLOCARRAY") +
              non_windows("HAVE_REALPATH") +
              non_windows("HAVE_RENAME") +
              non_windows("HAVE_RMDIR") +
              non_windows("HAVE_SELECT") +
              non_windows("HAVE_SEM_INIT") +
              non_windows("HAVE_SEM_POST") +
              non_windows("HAVE_SEM_WAIT") +
              non_windows("HAVE_SENDMSG") +
              non_windows("HAVE_SETENV") +
              non_windows("HAVE_SETGID") +
              non_windows("HAVE_SETUID") +
              non_windows("HAVE_SHM_OPEN") +
              non_windows("HAVE_SIGACTION") +
              non_windows("HAVE_SLEEP") +
              non_windows("HAVE_SOCKET") +
              non_windows("HAVE_STAT") +
              non_windows("HAVE_STRCASECMP") +
              non_windows("HAVE_STRCSPN") +
              non_windows("HAVE_STRICMP") +
              non_windows("HAVE_STRMODE") +
              non_windows("HAVE_STRNCASECMP") +
              non_windows("HAVE_STRNDUP") +
              non_windows("HAVE_STRNLEN") +
              non_windows("HAVE_STRSEP") +
              non_windows("HAVE_STRUCT_STAT") +
              non_windows("HAVE_STRXFRM_L") +
              non_windows("HAVE_SYMLINK") +
              non_windows("HAVE_SYNC") +
              non_windows("HAVE_SYSCALL") +
              non_windows("HAVE_SYSCONF") +
              non_windows("HAVE_SYS_CDEFS_BEGIN_END_DECLS") +
              non_windows("HAVE_S_ISREG") +
              non_windows("HAVE_TRUNCATE") +
              non_windows("HAVE_TYPE_BLKCNT_T") +
              non_windows("HAVE_TYPE_BLKSIZE_T") +
              non_windows("HAVE_TYPE_DEV_T") +
              non_windows("HAVE_TYPE_GID_T") +
              non_windows("HAVE_TYPE_NLINK_T") +
              non_windows("HAVE_TYPE_PID_T") +
              non_windows("HAVE_TYPE_SOCKLEN_T") +
              non_windows("HAVE_TYPE_SSIZE_T") +
              non_windows("HAVE_TYPE_UID_T") +
              non_windows("HAVE_UNLINK") +
              non_windows("HAVE_WRITE") +
              non_windows("HAVE__STATIC_ASSERT") +
              osx_only("HAVE_ARC4RANDOM") +
              osx_only("HAVE_CLONEFILE") +
              osx_only("HAVE_DECL_CLONEFILE") +
              osx_only("HAVE_DECL_FCOPYFILE") +
              osx_only("HAVE_DECL_GETENTROPY") +
              osx_only("HAVE_DECL_GETPEEREID") +
              osx_only("HAVE_DECL_ISSETUGID") +
              osx_only("HAVE_DECL_STRLCAT") +
              osx_only("HAVE_DECL_STRLCPY") +
              osx_only("HAVE_DRAND48") +
              osx_only("HAVE_FCOPYFILE") +
              osx_only("HAVE_GETENTROPY") +
              osx_only("HAVE_GETPEEREID") +
              osx_only("HAVE_ISSETUGID") +
              osx_only("HAVE_RANDOM") +
              osx_only("HAVE_SRANDOM") +
              osx_only("HAVE_STRLCAT") +
              osx_only("HAVE_STRLCPY") +
              windows_only("HAVE_DECL__CLOSE") +
              windows_only("HAVE_DECL__OPEN") +
              windows_only("HAVE_DECL__READ") +
              windows_only("HAVE_DECL__SNPRINTF") +
              windows_only("HAVE_DECL__STRERROR") +
              windows_only("HAVE_DECL__STRICMP") +
              windows_only("HAVE_DECL__STRNICMP") +
              windows_only("HAVE_DECL__VSNPRINTF") +
              windows_only("HAVE_DECL__WRITE") +
              windows_only("HAVE__CLOSE") +
              windows_only("HAVE__MKDIR") +
              windows_only("HAVE__OPEN") +
              windows_only("HAVE__READ") +
              windows_only("HAVE__RMDIR") +
              windows_only("HAVE__SNPRINTF") +
              windows_only("HAVE__STAT") +
              windows_only("HAVE__STRICMP") +
              windows_only("HAVE__STRNICMP") +
              windows_only("HAVE__VSNPRINTF") +
              windows_only("HAVE__WRITE") +
              # Non-standard ones, do we actually want to include these to maximize compatibility?
              linux_only("HAVE_ABSTRACT_SOCKETS") +
              linux_only("HAVE_SYMVER") +
              linux_only("HAVE_SYS_CDEFS_THROW") + [
        """
    fprintf(f, "\\n#endif // _RULES_AUTOCONF_CONFIG_H\\n");
    fclose(f);
    return 0;
}""",
    ],
)

cc_binary(
    name = "config_generator",
    srcs = ["config_generator.c"],
)

run_binary(
    name = "gen_config",
    outs = ["config.h"],
    args = ["$(execpath :config.h)"],
    tool = ":config_generator",
)

cc_library(
    name = "config",
    hdrs = ["config.h"],
    include_prefix = "rules_autoconf",
    visibility = ["//visibility:public"],
)

cc_test(
    name = "config_test",
    srcs = ["config_test.c"],
    deps = [":config"],
)
